tests/errors/const_call.vt
fn g(): int { return 3; } const X: int = g(); fn main(){}
